--- a/recursos/estilos/privado/comentarios.css
+++ b/recursos/estilos/privado/comentarios.css
@@ -239,7 +239,7 @@ body {
     margin-top: -36%;
     margin-left: -80%;
 }
-
+/*
 .btn.btn-primary {
     background-color: #0D4560;
     color: #ffffff;
@@ -249,9 +249,9 @@ body {
     font-size: 15px;
     top: 132%;
     left: 94%;
-    /* Mover el botón hacia la derecha */
+    /* Mover el botón hacia la derecha 
     transform: translate(-50%, -50%);
-}
+}*/
 
 .contenedor-botones {
     position: relative;
@@ -380,17 +380,49 @@ body {
     }
 }
 
+
+
+
+
 .rectanguloP1 {
-    border: solid white 30px;
-    width: 100%;
-    height: 600px;
+    margin: 30px;
+    width: 90%;
+    height: fit-content;
     background-color: #D9D9D9;
-    border-radius: 10px;
+    border-radius: 15px;
     margin: 0 auto;
+    padding: 1rem;
     /* Centrar horizontalmente */
 }
 
-.contedorDataZapato
+.contenedorComentario
 {
-    
+    padding: 30px;
+    width: 100%;
+    background-color: white;
+    border-radius: 15px;
+}
+
+.detalleZapato
+{
+    background-color: #EFEFEF;
+    width: max-content;
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+}
+.contenedorInfoCliente{
+    justify-self: center;
+    align-self: center;
+    justify-content: flex-start;
+
+}
+.contedorDataZapato{
+    justify-self: flex-end;
+    align-self: flex-end;
+    justify-content: flex-end;
+}
+.btn1
+{
+    background-color: #0D4560;
 }
