--- a/recursos/estilos/privado/plantilla.css
+++ b/recursos/estilos/privado/plantilla.css
@@ -266,3 +266,21 @@ a{
     text-decoration: none;
     color: black;
 }
+
+/*Sweet alert*/
+.swal2-popup {
+    font-family: "Titillium Web", sans-serif;
+}
+
+.swal2-title {
+    font-family: "Titillium Web", sans-serif;
+}
+
+.swal2-content {
+    font-family: "Titillium Web", sans-serif;
+}
+
+.swal2-actions button {
+    margin: 10px;
+    width: 100px;
+}
