--- a/recursos/estilos/privado/index.css
+++ b/recursos/estilos/privado/index.css
@@ -1,31 +1,32 @@
-
-/**Fondo de pantalla*/
+/** Fondo de pantalla */
 body {
-    background-image: url('../../imagenes/fondoprivado.svg');
-    background-color: #04151d;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-image: url('../../imagenes/fondoprivado.svg'); /* Imagen de fondo */
+    background-color: #04151d; /* Color de fondo */
+    background-size: cover; /* Ajusta la imagen para cubrir toda la pantalla */
+    background-repeat: no-repeat; /* No se repite la imagen de fondo */
+    background-attachment: fixed; /* Fija la imagen de fondo al desplazarse */
 }
 
-/** Estilo para el h2 */
+/** Estilo para el título principal (h2) */
 #mainTitle {
     color: white; /* Cambia el color del texto a blanco */
     text-align: center; /* Centra el texto */
 }
 
-/**Clase donde se pondra la animacion */
+/** Clase donde se pondrá la animación */
 .container {
-    animation: transitionIn 1s; 
+    animation: transitionIn 1s; /* Aplica la animación 'transitionIn' con una duración de 1 segundo */
 }
-/**Animacion de entrada a la pagina */
+
+/** Animación de entrada a la página */
 @keyframes transitionIn {
     from {
-     opacity: 0;
-     transform: rotateX(-10deg);
+        opacity: 0; /* Inicialmente invisible */
+        transform: rotateX(-10deg); /* Rotación en el eje X */
     }
     to  {
-     opacity: 1;
-     transform: rotateX(0);
+        opacity: 1; /* Se vuelve completamente visible */
+        transform: rotateX(0); /* Sin rotación */
     }
 }
+
