--- a/recursos/estilos/privado/marcas.css
+++ b/recursos/estilos/privado/marcas.css
@@ -1,8 +1,8 @@
+/* Estilo para el contenedor principal */
 .ContenedorT {
     min-height: 100%;
     max-height: 100%;
     width: 100%;
-    /*background-color: black;*/
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -12,15 +12,16 @@
     padding-bottom: 30px;
 }
 
+/* Estilo para el contenedor del título */
 .ContenedorTitulo {
     max-height: fit-content;
     width: fit-content;
     display: flex;
     flex-direction: column;
-    /*background-color: aquamarine;*/
     background-color: white;
 }
 
+/* Estilo para la línea horizontal */
 .linea1 {
     width: 100%;
     height: 2px;
@@ -31,6 +32,7 @@
     margin-top: 10px;
 }
 
+/* Estilo para el rectángulo */
 .rectangle {
     position: absolute;
     left: 0;
@@ -41,18 +43,21 @@
     border-bottom-right-radius: 50px;
 }
 
+/* Estilo para el texto con clase .textP */
 .textP {
     color: #146A93;
 }
 
+/* Estilo para el contenedor con clase .ContenedorPestaña */
 .ContenedorPestaña {
     height: 100%;
     flex: 1;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     width: 100%;
 }
 
+/* Estilo para elementos con clase .nav-item */
 .nav-item {
     background-color: #146A93;
     border-top-left-radius: 10px;
@@ -60,11 +65,15 @@
     margin-bottom: -5px;
     color: white;
 }
+
+/* Estilo para elementos con clase .nav-link */
 .nav-link {
     text-decoration: none;
     color: white;
     font-size: 18px;
 }
+
+/* Estilo para elementos con clase .contenidoP */
 .contenidoP {
     background-color: #1591CC;
     height: 100%;
@@ -73,32 +82,40 @@
     width: 100%;
     flex-direction: column;
 }
+
+/* Estilo para elementos con clase .tab-pane1 */
 .tab-pane1 {
     width: 100%;
     min-height: 70vh;
     max-height: 70vh;
     overflow-y: auto;
 }
-h1
-{
+
+/* Estilo para elementos h1 */
+h1 {
     width: fit-content;
 }
-.contenedorImagen
-{
+
+/* Estilo para elementos con clase .contenedorImagen */
+.contenedorImagen {
     width: fit-content;
     height: fit-content;
 }
-.contenedorDatos
-{
+
+/* Estilo para elementos con clase .contenedorDatos */
+.contenedorDatos {
     width: 50%;
     height: fit-content;
 }
-.ContenedorTotalA
-{
+
+/* Estilo para elementos con clase .ContenedorTotalA */
+.ContenedorTotalA {
     padding-top: 20px;
     padding-left: 50px;
     padding-right: 50px;
 }
+
+/* Estilo para elementos con clases .btn3 y .btn2 */
 .btn3, .btn2 {
     padding-left: 70px;
     padding-right: 70px;
@@ -106,16 +123,21 @@ h1
     padding-bottom: 10px;
     border: solid 0px;
 }
-.btn3{
+
+/* Estilo específico para .btn3 */
+.btn3 {
     background-color: #146A93;
 }
-.btn2
-{
+
+/* Estilo específico para .btn2 */
+.btn2 {
     background-color: white;
     color: black;
     border: #8F8F8F solid 1px;
 }
-.modal-content{
+
+/* Estilo para el contenido del modal */
+.modal-content {
     background-color: #1A89BD;
     color: white;
 }
