--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -33,3 +33,88 @@
 .textP {
     color: #146A93;
 }
+
+.ContenedorPestaña {
+    height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.contenidoP {
+    background-color: #1591CC;
+    height: 100%;
+    flex: 1;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+.rectangle {
+    position: absolute;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: #1A89BD;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+}
+
+.ContenedorTotal {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.nav-item {
+    border-top-left-radius: 10px;
+    background-color: #146A93;
+    border-top-right-radius: 10px;
+    margin-bottom: -5px;
+}
+
+.nav-link {
+    text-decoration: none;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+.ContenedorB{
+    display: flex;
+    justify-content: right;
+    padding: 20px;
+    
+}
+
+input{
+    position: relative;
+    padding: 10px;
+    padding-right: 35px;
+    left: 10px;
+    border-radius: 5px 5px 5px 5px;
+    border: 0;
+    outline: none;
+    background-color: whitesmoke;
+}
+
+.busq{
+    background-color: none;
+    padding: 10px;
+    position: absolute;
+    border: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    border-radius: 0 5px 5px 0;
+    color: #fff;
+
+}
