--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -47,8 +47,11 @@
     height: 100%;
     flex: 1;
     display: flex;
-    width: 100%;
     flex-direction: column;
+    align-items: center; /* Alinea el contenido en el centro verticalmente */
+    overflow: hidden; /* Evita que el contenido desborde del contenedor */
+    padding: 10px; /* Ajusta el relleno según sea necesario */
+    box-sizing: border-box; /* Asegura que el relleno se tenga en cuenta al calcular el tamaño del contenedor */
 }
 
 .rectangle {
@@ -91,7 +94,6 @@
     display: flex;
     justify-content: right;
     padding: 20px;
-    
 }
 
 input{
@@ -117,4 +119,137 @@ input{
     border-radius: 0 5px 5px 0;
     color: #fff;
 
+}
+
+.ContenedorTotal1{
+    display: flex;
+    align-items: center;
+}
+
+.carrusel {
+    width: 100%; 
+    display: flex;
+    flex-wrap: nowrap; 
+    overflow-x: auto; 
+    -webkit-overflow-scrolling: touch; 
+}
+
+.carrusel .lista-carrousel {
+    display: flex; 
+    flex-wrap: nowrap; 
+}
+
+.carrusel a {
+    scroll-snap-align: start; 
+}
+
+@media (max-width: 767px) {
+    .carrusel {
+        display: block; 
+        overflow-x: hidden; 
+    }
+
+    .carrusel a img {
+        width: 100%; 
+        margin-right: 0; 
+        margin-bottom: 15px; 
+    }
+}
+
+.lista-carrousel{
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    height: 304px;
+    padding: 10px 0px;
+    margin: 0px auto;
+    max-width: 100vw;
+    overflow: hidden;
+}
+
+.carrusel-track{
+    position: relative;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    transition: .5s ease-in-out;
+}
+
+.carrusel {
+    width: 100%;
+    padding: 0px;
+    box-sizing: border-box;
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory; /* Esto permite que el carrusel haga scroll horizontalmente */
+}
+
+.carrusel h4{
+    position: absolute;
+    z-index: 1;
+    font-size: 20px;
+    line-height: 23px;
+    color: black;
+    padding: 15px;
+
+}
+
+.carrousel h4 small{
+    font-size: 15px;
+    display: block;
+}
+
+.carrusel a img {
+    object-fit: cover;
+    border-radius: 15px;
+    height: 300px;
+    width: auto; /* Cambiado de 100% a auto */
+    margin-right: 15px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.5);
+    transition: .3s ease-in-out;
+}
+
+
+@media(min-width: 768px) {
+    .carrusel {
+        width: 90%; /* Reducir el ancho para pantallas más grandes */
+        margin: 0 auto; /* Centrar el carrusel */
+    }
+
+    .carrusel a img {
+        width: auto; /* Cambiar de 100% a auto para imágenes más grandes */
+    }
+}
+
+.carrusel-arrow{
+    border-radius: 30px;
+    background-color: white;
+    position: absolute;
+    z-index: 4;
+    width: 48px;
+    height: 48px;
+    text-align: center;
+    border: 0px;
+    cursor: pointer;
+}
+
+.carrusel-arrow:focus{
+    outline: 0;
+
+}
+
+.carrusel-arrow svg{
+    width: 12px;
+    height: 100%;
+    color: rgba(0,0,0,0.7);
+}
+
+.carrusel-prev{
+    left: 0px;
+}
+
+.carrusel-next{
+    right: 0px;
 }
