--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -253,3 +253,71 @@ input{
 .carrusel-next{
     right: 0px;
 }
+
+.ContenedorB {
+    display: flex;
+    flex: 1;
+    justify-content: flex-start;
+    z-index: 3;
+}
+
+.ContenedorTotalA {
+    min-width: 100%;
+    min-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 2vw;
+    background-color: gray;
+}
+
+.btnAdd {
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #0D4560;
+    border: solid 0px;
+}
+
+.tituloColoresD {
+    justify-self: flex-start;
+    align-self: flex-start;
+    justify-content: flex-start;
+    min-width: 100%;
+    margin-bottom: 15px;
+}
+
+.contenedor1,
+.contenedor2 {
+    min-width: 100%;
+    max-width: 100%;
+    min-height: fit-content;
+}
+
+.contenedorColoresScroll {
+    background-color: #5F5F5F;
+    border-radius: 5px;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 300px;
+    max-height: 400px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.pastilla {
+    background-color: white;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    margin: 30px;
+    width: 200px;
+    height: 50px;
+}
+
+h4
+{
+    margin: 0px;
+}
