--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -254,7 +254,7 @@ input{
     right: 0px;
 }
 
-.ContenedorB {
+.ContenedorB1 {
     display: flex;
     flex: 1;
     justify-content: flex-start;
@@ -267,7 +267,6 @@ input{
     max-width: 100%;
     max-height: 100%;
     padding: 2vw;
-    background-color: gray;
 }
 
 .btnAdd {
