--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -327,3 +327,30 @@ h4
 {
     margin: 0px;
 }
+
+/* Estilo para elementos con clases .btn3 y .btn2 */
+.btn3, .btn2 {
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border: solid 0px;
+}
+
+/* Estilo específico para .btn3 */
+.btn3 {
+    background-color: #146A93;
+}
+
+/* Estilo específico para .btn2 */
+.btn2 {
+    background-color: white;
+    color: black;
+    border: #8F8F8F solid 1px;
+}
+
+/* Estilo para el contenido del modal */
+.modal-content {
+    background-color: #1A89BD;
+    color: white;
+}
