--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -380,17 +380,160 @@ h4
 .tab-pane1
 {
     padding-top: 3%;
+    padding-left: 10%;
     min-width: 100%;
     min-height: fit-content;
 }
 
 .ContenedorForm{
-    background-color: #383a3b;
-    width: 110%;
+    background-color: #ffffff;
+    width: 100%;
     height: 500px;
-    right: 100%;
+    margin-right: 100px;
+    border-radius: 10px;
 }
 
-.sizedbox{
-    margin-left: 100%;
+.F1{
+    margin-top: 50px;
+    margin-left: 50px;
+    font-size: 20px;
+}
+
+.nombreZapato{
+    width: 30%;
+    border: 2px #1A89BD;
+    margin-left: 3%;
+    
+}
+
+.marcaZapato{
+    width: 30%;
+    border: #1A89BD;
+    margin-left: 60%;
+
+}
+
+.F2{
+    font-size: 20px;
+    margin-left: 61%;
+    margin-top: -8.5%;
+
+}
+
+.generoZapato{
+    width: 30%;
+    border: #1A89BD;
+    margin-left: 3%;
+    
+}
+
+.F3 {
+    font-size: 20px;
+    margin-left: 50px;
+    margin-top: 15px;
+}
+
+.precioZapato{
+    width: 30%;
+    border: #1A89BD;
+    margin-left: 60%;
+}
+
+.F4{
+    font-size: 20px;
+    margin-left: 61%;
+    margin-top: -8.5%;
+
+}
+
+.F5 {
+    font-size: 20px;
+    margin-left: 50px;
+    margin-top: 15px;
+}
+
+.descZapato{
+    vertical-align: top;
+    width: 30%;
+    height: 30%;
+    border: #1A89BD;
+    margin-left: 3%;
+}
+
+.descZapato ::placeholder{
+    vertical-align: top;
+}
+
+.btnAddD{
+    margin-left: 60%;
+}
+
+.carrusel {
+    margin-top: 90px;
+    height: fit-content;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+ 
+.carruselA {
+    display: flex;
+    justify-content: start;
+    width: 100%;
+}
+.cards-wrapper
+{
+    align-items: center;
+    justify-content: center;
+}
+ 
+@media screen and (min-width: 667px) {
+    .cards-wrapper {
+        display: flex;
+    }
+    .cardM {
+        margin: 25px;
+        width: calc(100%/5);
+    }
+ 
+}
+ 
+@media screen and (max-width: 666px) {
+    .cardM:not(:first-child) {
+        display: none;
+    }
+    .cards-wrapper {
+        display: flex;
+    }
+}
+.a {
+    width: 30px;
+}
+ 
+ 
+.containerCards {
+    width: 99vw;
+}
+ 
+@media screen and (max-width: 666px) {
+    #cardC {
+        margin: 15px;
+        margin-left: 30px;
+        width: calc(80%/1);
+    }
+}
+ 
+@media screen and (min-width: 667px) {
+    #cardC {
+        margin: 15px;
+        margin-left: 30px;
+        width: calc(90%/3);
+    }
+}
+#registrados
+{
+    max-width: 100%;
+    min-width: 100%;
 }
