--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -385,12 +385,22 @@ h4
     min-height: fit-content;
 }
 
-.ContenedorForm{
-    background-color: #ffffff;
+.ContenedorForm {
+    background-color: white;
     width: 100%;
-    height: 500px;
-    margin-right: 100px;
+    height: 100%;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    padding-bottom: 50px;
+    padding-top: 30px;
     border-radius: 10px;
+    margin-bottom: 30px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .F1{
@@ -453,19 +463,25 @@ h4
 }
 
 .descZapato{
-    vertical-align: top;
     width: 30%;
-    height: 30%;
     border: #1A89BD;
     margin-left: 3%;
 }
 
-.descZapato ::placeholder{
-    vertical-align: top;
+.btnAddD{
+    width: 200px;
+    height: 50px;
+    
+    margin-left: 250px;
+    color: white;
 }
 
-.btnAddD{
-    margin-left: 60%;
+.btnCan{
+    width: 200px;
+    height: 50px;
+    margin-left: 10px;
+    margin-top: 150px;
+    color: white;
 }
 
 .carrusel {
