--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -19,8 +19,7 @@
     background-color: white;
 }
 
-.linea1
-{
+.linea1 {
     width: 100%;
     height: 2px;
     background-color: #146A93;
@@ -48,10 +47,14 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Alinea el contenido en el centro verticalmente */
-    overflow: hidden; /* Evita que el contenido desborde del contenedor */
-    padding: 10px; /* Ajusta el relleno según sea necesario */
-    box-sizing: border-box; /* Asegura que el relleno se tenga en cuenta al calcular el tamaño del contenedor */
+    align-items: center;
+    /* Alinea el contenido en el centro verticalmente */
+    overflow: hidden;
+    /* Evita que el contenido desborde del contenedor */
+    padding: 10px;
+    /* Ajusta el relleno según sea necesario */
+    box-sizing: border-box;
+    /* Asegura que el relleno se tenga en cuenta al calcular el tamaño del contenedor */
 }
 
 .rectangle {
@@ -83,20 +86,20 @@
     text-decoration: none;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
 }
 
-.ContenedorB{
+.ContenedorB {
     display: flex;
     justify-content: right;
     padding: 20px;
 }
 
-input{
+input {
     position: relative;
     padding: 10px;
     padding-right: 35px;
@@ -107,7 +110,7 @@ input{
     background-color: whitesmoke;
 }
 
-.busq{
+.busq {
     background-color: none;
     padding: 10px;
     position: absolute;
@@ -121,42 +124,42 @@ input{
 
 }
 
-.ContenedorTotal1{
+.ContenedorTotal1 {
     display: flex;
     align-items: center;
 }
 
 .carrusel {
-    width: 100%; 
+    width: 100%;
     display: flex;
-    flex-wrap: nowrap; 
-    overflow-x: auto; 
-    -webkit-overflow-scrolling: touch; 
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .carrusel .lista-carrousel {
-    display: flex; 
-    flex-wrap: nowrap; 
+    display: flex;
+    flex-wrap: nowrap;
 }
 
 .carrusel a {
-    scroll-snap-align: start; 
+    scroll-snap-align: start;
 }
 
 @media (max-width: 767px) {
     .carrusel {
-        display: block; 
-        overflow-x: hidden; 
+        display: block;
+        overflow-x: hidden;
     }
 
     .carrusel a img {
-        width: 100%; 
-        margin-right: 0; 
-        margin-bottom: 15px; 
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 15px;
     }
 }
 
-.lista-carrousel{
+.lista-carrousel {
     position: relative;
     display: flex;
     align-items: center;
@@ -168,7 +171,7 @@ input{
     overflow: hidden;
 }
 
-.carrusel-track{
+.carrusel-track {
     position: relative;
     top: 0;
     left: 0;
@@ -183,10 +186,11 @@ input{
     box-sizing: border-box;
     display: flex;
     overflow-x: auto;
-    scroll-snap-type: x mandatory; /* Esto permite que el carrusel haga scroll horizontalmente */
+    scroll-snap-type: x mandatory;
+    /* Esto permite que el carrusel haga scroll horizontalmente */
 }
 
-.carrusel h4{
+.carrusel h4 {
     position: absolute;
     z-index: 1;
     font-size: 20px;
@@ -196,7 +200,7 @@ input{
 
 }
 
-.carrousel h4 small{
+.carrousel h4 small {
     font-size: 15px;
     display: block;
 }
@@ -205,32 +209,36 @@ input{
     object-fit: cover;
     border-radius: 15px;
     height: 300px;
-    width: auto; /* Cambiado de 100% a auto */
+    width: auto;
+    /* Cambiado de 100% a auto */
     margin-right: 15px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.5);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.5);
     transition: .3s ease-in-out;
 }
 
-.carrusel:hover{
-        transform: translateY(-10px);
-        transition-property: transform;
-        transition-duration: 0.5s;
-        transition-timing-function: ease;
-        transition-delay: 0s;
+.carrusel:hover {
+    transform: translateY(-10px);
+    transition-property: transform;
+    transition-duration: 0.5s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
 }
 
 @media(min-width: 768px) {
     .carrusel {
-        width: 90%; /* Reducir el ancho para pantallas más grandes */
-        margin: 0 auto; /* Centrar el carrusel */
+        width: 90%;
+        /* Reducir el ancho para pantallas más grandes */
+        margin: 0 auto;
+        /* Centrar el carrusel */
     }
 
     .carrusel a img {
-        width: auto; /* Cambiar de 100% a auto para imágenes más grandes */
+        width: auto;
+        /* Cambiar de 100% a auto para imágenes más grandes */
     }
 }
 
-.carrusel-arrow{
+.carrusel-arrow {
     border-radius: 30px;
     background-color: white;
     position: absolute;
@@ -242,22 +250,22 @@ input{
     cursor: pointer;
 }
 
-.carrusel-arrow:focus{
+.carrusel-arrow:focus {
     outline: 0;
 
 }
 
-.carrusel-arrow svg{
+.carrusel-arrow svg {
     width: 12px;
     height: 100%;
-    color: rgba(0,0,0,0.7);
+    color: rgba(0, 0, 0, 0.7);
 }
 
-.carrusel-prev{
+.carrusel-prev {
     left: 0px;
 }
 
-.carrusel-next{
+.carrusel-next {
     right: 0px;
 }
 
@@ -323,13 +331,13 @@ input{
     height: 50px;
 }
 
-h4
-{
+h4 {
     margin: 0px;
 }
 
 /* Estilo para elementos con clases .btn3 y .btn2 */
-.btn3, .btn2 {
+.btn3,
+.btn2 {
     padding-left: 70px;
     padding-right: 70px;
     padding-top: 10px;
@@ -355,7 +363,7 @@ h4
     color: white;
 }
 
-.ContenedorTotalA1{
+.ContenedorTotalA1 {
     justify-self: flex-start;
     align-self: flex-start;
     justify-content: flex-start;
@@ -377,17 +385,15 @@ h4
     min-height: fit-content;
 }
 
-.tab-pane1
-{
-    padding-top: 3%;
-    padding-left: 10%;
+.tab-pane1 {
+    padding: 10px;
     min-width: 100%;
     min-height: fit-content;
 }
 
 .ContenedorForm {
     background-color: white;
-    width: 100%;
+    width: 70%;
     height: 100%;
     display: flex;
     flex: 1;
@@ -403,38 +409,38 @@ h4
     padding-right: 40px;
 }
 
-.F1{
+.F1 {
     margin-top: 50px;
     margin-left: 50px;
     font-size: 20px;
 }
 
-.nombreZapato{
+.nombreZapato {
     width: 30%;
     border: 2px #1A89BD;
     margin-left: 3%;
-    
+
 }
 
-.marcaZapato{
+.marcaZapato {
     width: 30%;
     border: #1A89BD;
     margin-left: 60%;
 
 }
 
-.F2{
+.F2 {
     font-size: 20px;
     margin-left: 61%;
     margin-top: -8.5%;
 
 }
 
-.generoZapato{
+.generoZapato {
     width: 30%;
     border: #1A89BD;
     margin-left: 3%;
-    
+
 }
 
 .F3 {
@@ -443,13 +449,13 @@ h4
     margin-top: 15px;
 }
 
-.precioZapato{
+.precioZapato {
     width: 30%;
     border: #1A89BD;
     margin-left: 60%;
 }
 
-.F4{
+.F4 {
     font-size: 20px;
     margin-left: 61%;
     margin-top: -8.5%;
@@ -462,25 +468,23 @@ h4
     margin-top: 15px;
 }
 
-.descZapato{
+.descZapato {
     width: 30%;
     border: #1A89BD;
     margin-left: 3%;
 }
 
-.btnAddD{
+.btnAddD {
     width: 200px;
     height: 50px;
-    
-    margin-left: 250px;
     color: white;
+    margin-left: 10px;
 }
 
-.btnCan{
+.btnCan {
     width: 200px;
     height: 50px;
     margin-left: 10px;
-    margin-top: 150px;
     color: white;
 }
 
@@ -493,46 +497,49 @@ h4
     justify-content: center;
     text-align: center;
 }
- 
+
 .carruselA {
     display: flex;
     justify-content: start;
     width: 100%;
 }
-.cards-wrapper
-{
+
+.cards-wrapper {
     align-items: center;
     justify-content: center;
 }
- 
+
 @media screen and (min-width: 667px) {
     .cards-wrapper {
         display: flex;
     }
+
     .cardM {
         margin: 25px;
         width: calc(100%/5);
     }
- 
+
 }
- 
+
 @media screen and (max-width: 666px) {
     .cardM:not(:first-child) {
         display: none;
     }
+
     .cards-wrapper {
         display: flex;
     }
 }
+
 .a {
     width: 30px;
 }
- 
- 
+
+
 .containerCards {
     width: 99vw;
 }
- 
+
 @media screen and (max-width: 666px) {
     #cardC {
         margin: 15px;
@@ -540,7 +547,7 @@ h4
         width: calc(80%/1);
     }
 }
- 
+
 @media screen and (min-width: 667px) {
     #cardC {
         margin: 15px;
@@ -548,8 +555,18 @@ h4
         width: calc(90%/3);
     }
 }
-#registrados
-{
+
+#registrados {
     max-width: 100%;
     min-width: 100%;
+}
+
+.contenedorBotones1A {
+    display: flex;
+    flex-direction: row;
+    justify-self: center;
+    align-self: center;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
