--- a/recursos/estilos/publico/plantilla.css
+++ b/recursos/estilos/publico/plantilla.css
@@ -1,3 +1,9 @@
+html,
+body,
+main {
+    min-width: 100%;
+}
+
 main {
     min-height: 50vh;
 }
@@ -22,9 +28,16 @@ h6 {
     max-width: max-content;
 }
 
-@media screen and (max-width: 1134px) {
+@media screen and (max-width: 1180px) {
     .contenedorMarcas {
         min-width: 400px;
+        max-width: max-content;
+    }
+}
+
+@media screen and (max-width: 1045px) {
+    .contenedorMarcas {
+        min-width: 265px;
         max-width: max-content;
     }
 }
