--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -1,3 +1,4 @@
+/*-------------------------- CARRUSEL PRINCIPAL ------------------*/
 .carrusel {
     min-height: fit-content;
     max-height: max-content;
@@ -20,4 +21,68 @@
     min-height: 500px;
     object-fit: cover;
     object-position: bottom;
+}
+
+/*-------------------------- CARRUSEL DE MARCAS ------------------*/
+
+.imgMarca {
+    width: 80px;
+    height: 80px;
+}
+
+.linea {
+    background-color: #146A93;
+    width: 100%;
+    height: 3px;
+}
+
+.a {
+    width: 30px;
+}
+
+@media screen and (min-width: 667px) {
+    .cards-wrapper {
+        display: flex;
+    }
+
+    .cardM {
+        margin: 25px;
+        width: calc(100%/5);
+    }
+
+    .image-wrapper {
+        height: 16vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .image-wrapper img {
+
+        width: 16vw;
+        height: 16vw;
+    }
+}
+
+@media screen and (max-width: 666px) {
+    .cardM:not(:first-child) {
+        display: none;
+    }
+
+    .image-wrapper img {
+        width: 100vw;
+        height: 30vh;
+    }
+
+    .cards-wrapper {
+        display: flex;
+    }
+
+    .image-wrapper {
+        height: 20vh;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
