Continuacion de sobre nosotros

--- a/recursos/estilos/fuentes.css
+++ b/recursos/estilos/fuentes.css
@@ -1,6 +1,10 @@
 .bg-color-1blue {
     background-color: #1591CC;
 }
+.bg-color-2blue
+{
+    background-color: #1A89BD;
+}
 
 .bg-color-3blue {
     background-color: #0E72A1;
